--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 <body>
   <!-- Logo area with space on top -->
   <div class="logo-top-container" role="banner" aria-label="Logo Colégio Barbosa Ferraz">
-    <img src="imagens/Borzuk.png" alt="Logo Colégio Barbosa Ferraz" />
+    <img src="Borzuk.png" alt="Logo Colégio Barbosa Ferraz" />
 
     <p class="logo-top-container"tabindex="0">Colégio Barbosa Ferraz</p>
   </div>
