--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SETEC 2024 - Colégio Barbosa Ferraz</title>
+  <title>SETEC 2024 - Colégio Estadual Barbosa Ferraz</title>
   <style>
     /* CSS Custom Properties for consistent theming */
     :root {
@@ -236,7 +236,7 @@
 <body>
   <!-- Logo area with space on top -->
   <div class="logo-top-container" role="banner" aria-label="Logo Colégio Barbosa Ferraz">
-    <img src="Borzuk.png" alt="Logo Colégio Barbosa Ferraz" />
+    <img src="Borzuk.png" alt="Logo Colégio Estadual Barbosa Ferraz" />
 
     <p class="logo-top-container"tabindex="0">Colégio Barbosa Ferraz</p>
   </div>
